# expo-panorama-view

./: README.md  package.json
android/: CMakeLists.txt  build.gradle
android/src/main/cpp/: native-lib.cpp
android/src/main/cpp/constants/: CodecType.h  Flags.h  PixelLayout.h  PixelType.h  PreferCodecType.h  SampleLayout.h  SampleType.h  ShaderScripts.h  SizeMode.h  StreamInfo.h  platform.h
android/src/main/cpp/interfaces/: IAudioOutput.h  IDecoder.h  IPlayStateListener.h  IRenderLogic.h  IVideoOutput.h
android/src/main/cpp/player/: JavaStateListener.cpp  JavaStateListener.h  Player.cpp  Player.h  PlayerContext.cpp  PlayerContext.h
android/src/main/cpp/utils/: AudioConverter.cpp  AudioConverter.h  AudioFrame.h  FFmpegDecoder.cpp  FFmpegDecoder.h  Factory.cpp  Factory.h  HandlerThread.cpp  HandlerThread.h  LinkedBlockingQueue.h  Log.h  PacketWrapper.h  VideoFrame.h  pixel_loader.cpp  pixel_loader.h  platform.h  sample_loader.cpp  sample_loader.h  utils.h
android/src/main/cpp/utils/audio/: OboePlayer.cpp  OboePlayer.h
android/src/main/cpp/utils/video/: EGLWindow.cpp  EGLWindow.h  GLESRender.cpp  GLESRender.h  OpenGLESPlayer2.cpp  OpenGLESPlayer2.h  RenderProgram.cpp  RenderProgram.h  gl_data.cpp  gl_data.h  gl_utils.cpp  gl_utils.h
android/src/main/cpp/utils/video/render_logic/: NV12_RenderLogic.cpp  NV12_RenderLogic.h  NV21_RenderLogic.cpp  NV21_RenderLogic.h  YUV420P_RenderLogic.cpp  YUV420P_RenderLogic.h
android/src/main/java/expo/modules/panoramaview/: ExpoPanoramaView.kt  ExpoPanoramaViewModule.kt  PlayerListener.kt
example/: App.tsx  app.json  metro.config.js  package.json  tsconfig.json  webpack.config.js
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/expo/modules/panoramaview/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/expopanoramaviewexample/: Info.plist
example/ios/expopanoramaviewexample.xcodeproj/: project.pbxproj
example/ios/expopanoramaviewexample.xcodeproj/xcshareddata/xcschemes/: expopanoramaviewexample.xcscheme
example/ios/expopanoramaviewexample.xcworkspace/: contents.xcworkspacedata
ios/: ExpoPanoramaView.podspec  ExpoPanoramaView.swift  ExpoPanoramaViewModule.swift
src/: ExpoPanoramaView.tsx  ExpoPanoramaView.types.ts  ExpoPanoramaViewModule.ts  index.ts
